fix: adjustment on small device

--- a/src/styles/Dashboard/Dashboard.css
+++ b/src/styles/Dashboard/Dashboard.css
@@ -91,6 +91,38 @@
         /* background-color: red; */
         margin-top: -20px;
     }
+    .heart_container
+    {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 25px;
+        width: 90px;
+        background-color: #390ead;
+        color: white;
+        position: absolute;
+        margin-top: -190px;
+        margin-left: 140px;
+        border-radius: 8px;
+        font-size: 10px;
+    }
+
+    .leg_container
+    {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 25px;
+        width: 90px;
+        background-color: #2ed1de;
+        position: absolute;
+        color: #390ead;
+        border-radius: 8px;
+        font-size: 10px;
+        margin-top: -90px;
+        margin-left: -5px;
+    }
+
 }
 @media screen and (max-width:395px) {
     .dashboard_container
